--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,13 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "version": "1.2.3",
+    "version": "2.0.1",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "ext-json": "*",
-        "symfony/yaml": "^3.4.47"
+        "symfony/yaml": "^6.4"
     },
     "scripts": {
         "versadumps-init": "Versadumps\\Versadumps\\Init::run",
@@ -79,8 +79,8 @@
         }
     ],
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "3.0",
-        "laravel/pint": "1.0",
-        "rector/rector": "0.12"
+        "friendsofphp/php-cs-fixer": "^3.40",
+        "laravel/pint": "^1.15",
+        "rector/rector": "^1.0"
     }
 }
