--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,12 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "version": "2.0.1",
+    "version": "2.0.0",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
-        "ext-json": "*",
-        "symfony/yaml": "^6.4"
+        "ext-json": "*"
     },
     "scripts": {
         "versadumps-init": "Versadumps\\Versadumps\\Init::run",
