Add semantic methods documentation and examples for VersaDumps
- Created SEMANTIC_METHODS.md to provide a comprehensive guide on semantic methods (info, success, warning, error) with usage examples.
- Implemented advanced examples in advanced.php showcasing various features of the VersaDumps builder pattern.
- Added payload examples in payload-examples.php to demonstrate the JSON payloads sent to the VersaDumps server.
- Developed semantic-methods.php to illustrate specific use cases of semantic methods in logging and debugging scenarios.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "versadumps-php/versadumps-php",
-    "description": "paquete para php para enviar dumps a versaDumps Visualizer",
+    "description": "Librería PHP moderna para enviar dumps a versaDumps Visualizer con Builder Pattern, métodos semánticos, stack traces y 10 colores predefinidos",
     "type": "library",
     "license": "MIT",
     "keywords": [
@@ -8,7 +8,11 @@
         "var_dump",
         "dumps",
         "visualizer",
-        "logger"
+        "logger",
+        "debugging",
+        "builder-pattern",
+        "semantic-methods",
+        "stack-trace"
     ],
     "autoload": {
         "psr-4": {
@@ -30,7 +34,7 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "version": "2.1.0",
+    "version": "2.2.0",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
